src/components/skills/skills.sass
#skills
  .heading
    color: $primary1
    margin-bottom: 16px
  .skills-holder
    margin: 12px -3px
    .skill
      margin: 7px 5px
      color: black
      line-height: 8px
      padding: 14px 18px
      border-radius: 4px
      display: inline-block
      background-color: white
      border: 1px solid rgba(0,0,0,0.12)
      box-shadow: 0 0 6px rgba(0,0,0,0.02)
      @include user-select()
      @include transition(all 400ms ease)
      span
        position: relative
      .mdi
        top: 1px
        color: $primary2
        margin-right: 12px
        position: relative
        display: inline-block
        transform: scale(1.2)
        @include transition(all 400ms ease)
      &:hover
        box-shadow: 0 0 9px rgba(0,0,0,0.08)
        .mdi
          transform: scale(1.7)
  &.toggled
    border-top: 1px solid
    border-bottom: 1px solid
    border-color: rgba(0,0,0,0.14)
    box-shadow: 0 0 0 0 rgba(0,0,0,0.14)
    .skills-holder
      .skill
        box-shadow: 0 0 0 0 rgba(0,0,0,0.14)
        .mdi
          transform: scale(1.0)

@media (max-width: 767px)
  #skills
    .skills-holder
      margin: 12px -2px
      .skill
        margin: 6px 4px
        padding: 11px 14px
        .mdi
          margin-right: 10px

@media (max-width: 361px)
  #skills
    .skills-holder
      margin: 12px -1px
      .skill
        margin: 5px 3px
        padding: 9px 12px
        span
          top: -1px
        .mdi
          top: 0px
          // margin-right: 8px

